--- a/fiction.html
+++ b/fiction.html
@@ -238,7 +238,7 @@
     <!-- Issue 003 -->
     <section class="issue-section" id="issue-003">
       <div class="issue-cover">
-        <img src="Placeholder Cover 1.png" alt="Issue 003 Cover">
+        <img src="Burnline Issue 03.png" alt="Issue 003 Cover">
         <div class="issue-meta">
           <span class="issue-tag">Issue 003</span>
           <h2 class="issue-title">The Latest Issue</h2>
@@ -274,7 +274,7 @@
     <!-- Issue 002 -->
     <section class="issue-section" id="issue-002">
       <div class="issue-cover">
-        <img src="Placeholder Cover 2.png" alt="Issue 002 Cover">
+        <img src="Burnline Issue 02.png" alt="Issue 002 Cover">
         <div class="issue-meta">
           <span class="issue-tag">Issue 002</span>
           <h2 class="issue-title">The Latest Issue</h2>
@@ -310,7 +310,7 @@
     <!-- Issue 001 -->
     <section class="issue-section" id="issue-001">
       <div class="issue-cover">
-        <img src="Placeholder Cover 3.png" alt="Issue 001 Cover">
+        <img src="Burnline Issue 01.png" alt="Issue 001 Cover">
         <div class="issue-meta">
           <span class="issue-tag">Issue 001</span>
           <h2 class="issue-title">The Latest Issue</h2>
