--- a/fiction.html
+++ b/fiction.html
@@ -23,9 +23,7 @@
       background: linear-gradient(135deg, var(--bg-start), var(--bg-end));
       color: var(--text);
     }
-    h1, h2, h3, h4, nav a, header {
-      font-family: 'Orbitron', sans-serif;
-    }
+    h1, h2, h3, h4, nav a, header { font-family: 'Orbitron', sans-serif; }
 
     /* Header */
     .site-header {
@@ -39,28 +37,22 @@
       flex-wrap: wrap;
       position: relative;
     }
-    .logo-title {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-      text-decoration: none;
-      color: inherit;
-    }
-    .logo-title img {height: 60px; width: auto;}
-    .site-nav {display: flex; gap: 2rem; font-size: 1rem;}
-    .site-nav a {color:#0f0f1c; text-decoration:none; font-weight:bold; transition: color .3s;}
-    .site-nav a:hover {color: var(--pink);}
-    .hamburger {display:none; flex-direction:column; justify-content:center; cursor:pointer; width:30px; height:25px; gap:5px;}
-    .hamburger div {background:#0f0f1c; height:4px; width:100%; border-radius:2px;}
+    .logo-title { display: flex; align-items: center; gap: 1rem; text-decoration: none; color: inherit; }
+    .logo-title img { height: 60px; width: auto; }
+    .site-nav { display: flex; gap: 2rem; font-size: 1rem; }
+    .site-nav a { color:#0f0f1c; text-decoration:none; font-weight:bold; transition: color .3s; }
+    .site-nav a:hover { color: var(--pink); }
+    .hamburger { display:none; flex-direction:column; justify-content:center; cursor:pointer; width:30px; height:25px; gap:5px; }
+    .hamburger div { background:#0f0f1c; height:4px; width:100%; border-radius:2px; }
     @media (max-width: 768px){
       .site-nav{flex-direction:column; width:100%; display:none; background:var(--neon); padding:1rem 0; margin-top:1rem;}
       .site-nav.active{display:flex;}
       .hamburger{display:flex;}
     }
 
-    /* Shared styles */
-    a {color: var(--neon); text-decoration:none;}
-    a:hover{text-decoration:none;}
+    /* Shared */
+    a { color: var(--neon); text-decoration:none; }
+    a:hover { text-decoration:none; }
     .gradient-heading {
       font-size: 2.2rem;
       background: linear-gradient(90deg, #f72585, #7209b7);
@@ -68,21 +60,14 @@
       -webkit-text-fill-color: transparent;
       margin: 0 0 1rem 0;
     }
-    .content {
-      max-width: 1200px;
-      margin: 2rem auto 4rem;
-      padding: 0 2rem;
-    }
-    .section-intro {
-      text-align:center;
-      margin: 2rem 0 3rem;
-    }
+    .content { max-width: 1200px; margin: 2rem auto 4rem; padding: 0 2rem; }
+    .section-intro { text-align:center; margin: 2rem 0 3rem; }
 
-    /* Issue Library */
-    .issue-section{
-      display:grid;
-      grid-template-columns: 380px 1fr;
+    /* Issue hero layout (matches homepage) */
+    .issue-hero{
+      display:flex;
       gap: 2rem;
+      align-items: flex-start;
       background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.02));
       border: 1px solid rgba(255,255,255,0.08);
       border-radius: 16px;
@@ -90,53 +75,51 @@
       box-shadow: 0 10px 30px rgba(0,0,0,0.35);
       margin-bottom: 2.5rem;
     }
-    .issue-cover{
+    .issue-hero .cover{
+      flex: 0 0 380px;
+      max-width: 380px;
       background: var(--card-2);
       border-radius: 12px;
-      overflow:hidden;
-      display:flex;
-      flex-direction:column;
-      gap:1rem;
+      overflow: hidden;
     }
-    .issue-cover img{
+    .issue-hero .cover img{
       width:100%;
       height:auto;
       display:block;
+      aspect-ratio: 3 / 4;
+      object-fit: cover;
     }
-    .issue-meta{
-      padding: 0 1rem 1rem 1rem;
-      display:flex; 
-      flex-direction:column; 
-      gap:.5rem;
+    .issue-hero .text{
+      flex:1;
+      max-width:700px;
+      display:flex;
+      flex-direction:column;
     }
-    .issue-tag{
-      display:inline-block;
-      background: rgba(13,246,227,0.15);
-      color: var(--neon);
-      border: 1px solid rgba(13,246,227,0.35);
-      padding:.25rem .5rem;
-      border-radius: 999px;
-      font-size:.8rem;
-      letter-spacing:.04em;
-      text-transform:uppercase;
-      font-weight:700;
+    .issue-hero .two-col{
+      display:flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      margin-top: 0.5rem;
     }
-    .issue-title{
-      margin:.25rem 0 0 0;
-      font-size:1.6rem;
-      line-height:1.2;
-      color:#fff;
+    .issue-hero .two-col > div{ flex: 1 1 300px; }
+    .issue-hero h3{
+      margin-bottom: 1rem;
+      font-size: 1.1rem;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      color: #888;
     }
-    .issue-sub{
-      color: var(--muted);
-      font-size:.95rem;
-      line-height:1.5;
-    }
-    .issue-actions{
-      display:flex; 
-      gap:.75rem; 
-      flex-wrap:wrap; 
-      margin-top:.5rem;
+    .issue-hero ul{ list-style:none; padding:0; margin:0; color: var(--muted); }
+    .issue-hero li{ margin-bottom: .75rem; }
+    .issue-hero li strong{ color:#fff; }
+    .issue-hero .cta{
+      width: 100%;
+      text-align: center;
+      margin-top: 2.5rem;
+      display:flex;
+      gap:.75rem;
+      justify-content:center;
+      flex-wrap:wrap;
     }
     .btn{
       background: var(--neon);
@@ -146,70 +129,26 @@
       padding:.65rem 1rem;
       border-radius:8px;
       cursor:pointer;
+      display:inline-block;
     }
     .btn.secondary{
       background: transparent;
       color: var(--neon);
       border:1px solid rgba(13,246,227,0.45);
     }
-
-    .issue-details{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 2rem;
-      align-content:start;
-    }
-    .toc-section h3{
-      margin:0 0 .5rem 0;
-      font-size:1rem;
-      text-transform:uppercase;
-      letter-spacing:.06em;
-      color:#b6b9ff;
-    }
-    .toc-section ul{
-      list-style:none; 
-      padding:0; 
-      margin:0;
-      color:#d8d8e5;
-    }
-    .toc-section li{
-      margin:.6rem 0;
-    }
-    .toc-section li strong{color:#fff;}
-    .toc-section small{color:#8e90a6;}
-
     @media (max-width: 980px){
-      .issue-section{grid-template-columns:1fr; }
-      .issue-details{grid-template-columns:1fr;}
+      .issue-hero{flex-direction:column;}
+      .issue-hero .cover{max-width:100%; flex:0 0 auto;}
     }
 
     /* Footer */
-    footer {
-      background: #0f0f1c;
-      padding: 2rem;
-      color: #ccc;
-      margin-top: 4rem;
-    }
-    .footer-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      gap: 2rem;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-    .footer-column {flex:1; min-width:220px;}
-    .footer-logo {width: 80px; margin-bottom: 1rem;}
-    .newsletter-input {
-      padding: 0.5rem; width: 80%; margin-bottom: 0.5rem;
-      border-radius: 4px; border: none;
-    }
-    .newsletter-button {
-      padding: 0.5rem 1rem; background-color: var(--neon);
-      border: none; color: #0f0f1c; font-weight: bold;
-      border-radius: 4px; cursor: pointer;
-    }
-    .footer-bottom {text-align: center; margin-top: 2rem; color: #777; font-size: 0.85rem;}
+    footer { background: #0f0f1c; padding: 2rem; color: #ccc; margin-top: 4rem; }
+    .footer-container { display: flex; flex-wrap: wrap; justify-content: space-between; gap: 2rem; max-width: 1200px; margin: 0 auto; }
+    .footer-column { flex:1; min-width:220px; }
+    .footer-logo { width: 80px; margin-bottom: 1rem; }
+    .newsletter-input { padding: 0.5rem; width: 80%; margin-bottom: 0.5rem; border-radius: 4px; border: none; }
+    .newsletter-button { padding: 0.5rem 1rem; background-color: var(--neon); border: none; color: #0f0f1c; font-weight: bold; border-radius: 4px; cursor: pointer; }
+    .footer-bottom { text-align: center; margin-top: 2rem; color: #777; font-size: 0.85rem; }
   </style>
 </head>
 <body>
@@ -236,109 +175,103 @@
     </div>
 
     <!-- Issue 003 -->
-    <section class="issue-section" id="issue-003">
-      <div class="issue-cover">
-        <img src="Burnline Issue 03.png" alt="Issue 003 Cover">
-        <div class="issue-meta">
-          <span class="issue-tag">Issue 003</span>
-          <h2 class="issue-title">The Latest Issue</h2>
-          <p class="issue-sub">A curated set of fiction, art, and essays exploring chrome dreams, city ghosts, and the meshes that bind us.</p>
-          <div class="issue-actions">
-            <a class="btn" href="#">Read Issue</a>
-            <a class="btn secondary" href="#">Download PDF</a>
+    <section class="issue-hero" id="issue-003">
+      <a href="#issue-003-open" class="cover">
+        <img src="Burnline Issue 03.png" alt="Issue 03 cover" loading="lazy" width="900" height="1200">
+      </a>
+      <div class="text">
+        <h1 class="gradient-heading" style="margin-bottom: 1rem;">Issue 03</h1>
+        <div class="two-col">
+          <div>
+            <h3>Fiction</h3>
+            <ul>
+              <li><strong>Neon Ashes</strong> by J. M. Caldwell</li>
+              <li><strong>Chrome Dreams</strong> by Riko Ahn</li>
+              <li><strong>The Memory Blackout</strong> by Dex Silva</li>
+              <li><strong>Smog Season</strong> by Aliya Zhang</li>
+              <li><strong>Datalace</strong> by T.J. Krow</li>
+            </ul>
+          </div>
+          <div>
+            <h3>Artwork</h3>
+            <ul>
+              <li><strong>Neural Bloom</strong> by Keira Vonn</li>
+              <li><strong>Ghost Signal</strong> by M. Reyes</li>
+              <li><strong>Synth Skin</strong> by ARTI.FX</li>
+            </ul>
           </div>
         </div>
-      </div>
-      <div class="issue-details">
-        <div class="toc-section">
-          <h3>Fiction</h3>
-          <ul>
-            <li><strong>Neon Ashes</strong> <small>by J. M. Caldwell</small></li>
-            <li><strong>Chrome Ghosts</strong> <small>by A. Rivera</small></li>
-            <li><strong>Signal Bloom</strong> <small>by K. A. Wong</small></li>
-            <li><strong>Blackout City</strong> <small>by P. Okoye</small></li>
-          </ul>
-        </div>
-        <div class="toc-section">
-          <h3>Art</h3>
-          <ul>
-            <li><strong>Hotline District</strong> <small>by S. Ito</small></li>
-            <li><strong>Subway Aurora</strong> <small>by M. Torres</small></li>
-            <li><strong>Vanta Lines</strong> <small>by R. Kaur</small></li>
-            <li><strong>Grid/Grief</strong> <small>by D. Park</small></li>
-          </ul>
+        <div class="cta">
+          <a class="btn" href="#">Read Issue</a>
+          <a class="btn secondary" href="#">Download PDF</a>
         </div>
       </div>
     </section>
 
     <!-- Issue 002 -->
-    <section class="issue-section" id="issue-002">
-      <div class="issue-cover">
-        <img src="Burnline Issue 02.png" alt="Issue 002 Cover">
-        <div class="issue-meta">
-          <span class="issue-tag">Issue 002</span>
-          <h2 class="issue-title">The Latest Issue</h2>
-          <p class="issue-sub">A curated set of fiction, art, and essays exploring chrome dreams, city ghosts, and the meshes that bind us.</p>
-          <div class="issue-actions">
-            <a class="btn" href="#">Read Issue</a>
-            <a class="btn secondary" href="#">Download PDF</a>
+    <section class="issue-hero" id="issue-002">
+      <a href="#issue-002-open" class="cover">
+        <img src="Burnline Issue 02.png" alt="Issue 02 cover" loading="lazy" width="900" height="1200">
+      </a>
+      <div class="text">
+        <h1 class="gradient-heading" style="margin-bottom: 1rem;">Issue 02</h1>
+        <div class="two-col">
+          <div>
+            <h3>Fiction</h3>
+            <ul>
+              <li><strong>Neon Ashes</strong> by J. M. Caldwell</li>
+              <li><strong>Chrome Dreams</strong> by Riko Ahn</li>
+              <li><strong>The Memory Blackout</strong> by Dex Silva</li>
+              <li><strong>Smog Season</strong> by Aliya Zhang</li>
+              <li><strong>Datalace</strong> by T.J. Krow</li>
+            </ul>
+          </div>
+          <div>
+            <h3>Artwork</h3>
+            <ul>
+              <li><strong>Neural Bloom</strong> by Keira Vonn</li>
+              <li><strong>Ghost Signal</strong> by M. Reyes</li>
+              <li><strong>Synth Skin</strong> by ARTI.FX</li>
+            </ul>
           </div>
         </div>
-      </div>
-      <div class="issue-details">
-        <div class="toc-section">
-          <h3>Fiction</h3>
-          <ul>
-            <li><strong>Neon Ashes</strong> <small>by J. M. Caldwell</small></li>
-            <li><strong>Chrome Ghosts</strong> <small>by A. Rivera</small></li>
-            <li><strong>Signal Bloom</strong> <small>by K. A. Wong</small></li>
-            <li><strong>Blackout City</strong> <small>by P. Okoye</small></li>
-          </ul>
-        </div>
-        <div class="toc-section">
-          <h3>Art</h3>
-          <ul>
-            <li><strong>Hotline District</strong> <small>by S. Ito</small></li>
-            <li><strong>Subway Aurora</strong> <small>by M. Torres</small></li>
-            <li><strong>Vanta Lines</strong> <small>by R. Kaur</small></li>
-            <li><strong>Grid/Grief</strong> <small>by D. Park</small></li>
-          </ul>
+        <div class="cta">
+          <a class="btn" href="#">Read Issue</a>
+          <a class="btn secondary" href="#">Download PDF</a>
         </div>
       </div>
     </section>
 
     <!-- Issue 001 -->
-    <section class="issue-section" id="issue-001">
-      <div class="issue-cover">
-        <img src="Burnline Issue 01.png" alt="Issue 001 Cover">
-        <div class="issue-meta">
-          <span class="issue-tag">Issue 001</span>
-          <h2 class="issue-title">The Latest Issue</h2>
-          <p class="issue-sub">A curated set of fiction, art, and essays exploring chrome dreams, city ghosts, and the meshes that bind us.</p>
-          <div class="issue-actions">
-            <a class="btn" href="#">Read Issue</a>
-            <a class="btn secondary" href="#">Download PDF</a>
+    <section class="issue-hero" id="issue-001">
+      <a href="#issue-001-open" class="cover">
+        <img src="Burnline Issue 01.png" alt="Issue 01 cover" loading="lazy" width="900" height="1200">
+      </a>
+      <div class="text">
+        <h1 class="gradient-heading" style="margin-bottom: 1rem;">Issue 01</h1>
+        <div class="two-col">
+          <div>
+            <h3>Fiction</h3>
+            <ul>
+              <li><strong>Neon Ashes</strong> by J. M. Caldwell</li>
+              <li><strong>Chrome Dreams</strong> by Riko Ahn</li>
+              <li><strong>The Memory Blackout</strong> by Dex Silva</li>
+              <li><strong>Smog Season</strong> by Aliya Zhang</li>
+              <li><strong>Datalace</strong> by T.J. Krow</li>
+            </ul>
+          </div>
+          <div>
+            <h3>Artwork</h3>
+            <ul>
+              <li><strong>Neural Bloom</strong> by Keira Vonn</li>
+              <li><strong>Ghost Signal</strong> by M. Reyes</li>
+              <li><strong>Synth Skin</strong> by ARTI.FX</li>
+            </ul>
           </div>
         </div>
-      </div>
-      <div class="issue-details">
-        <div class="toc-section">
-          <h3>Fiction</h3>
-          <ul>
-            <li><strong>Neon Ashes</strong> <small>by J. M. Caldwell</small></li>
-            <li><strong>Chrome Ghosts</strong> <small>by A. Rivera</small></li>
-            <li><strong>Signal Bloom</strong> <small>by K. A. Wong</small></li>
-            <li><strong>Blackout City</strong> <small>by P. Okoye</small></li>
-          </ul>
-        </div>
-        <div class="toc-section">
-          <h3>Art</h3>
-          <ul>
-            <li><strong>Hotline District</strong> <small>by S. Ito</small></li>
-            <li><strong>Subway Aurora</strong> <small>by M. Torres</small></li>
-            <li><strong>Vanta Lines</strong> <small>by R. Kaur</small></li>
-            <li><strong>Grid/Grief</strong> <small>by D. Park</small></li>
-          </ul>
+        <div class="cta">
+          <a class="btn" href="#">Read Issue</a>
+          <a class="btn secondary" href="#">Download PDF</a>
         </div>
       </div>
     </section>
