--- a/index.html
+++ b/index.html
@@ -298,41 +298,42 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <a href="#latest-issue" onclick="openFlipbook(event)">
-      <img src="Burnline Issue 01.png" alt="Latest issue cover" />
-    </a>
+ <section class="hero">
+  <a href="#latest-issue" onclick="openFlipbook(event)">
+    <img src="Burnline Issue 01.png" alt="Latest issue cover" />
+  </a>
 
-    <div class="hero-text" style="flex: 1; max-width: 700px; display: flex; flex-direction: column;">
-<h1 class="gradient-heading" style="margin-bottom: 1rem;">The Latest Issue</h1>
+  <div class="hero-text" style="flex: 1; max-width: 700px; display: flex; flex-direction: column;">
+    <h1 class="gradient-heading" style="margin-bottom: 1rem;">The Latest Issue</h1>
 
-<div style="display: flex; flex-wrap: wrap; gap: 2rem; margin-top: 0.5rem;">
-  <div style="flex: 1 1 300px;">
-    <h3 style="margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Fiction</h3>
-    <ul style="list-style: none; padding: 0; margin: 0; color: var(--text-muted);">
-      <li style="margin-bottom: 0.75rem;"><strong>Neon Ashes</strong> by J. M. Caldwell</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Chrome Dreams</strong> by Riko Ahn</li>
-      <li style="margin-bottom: 0.75rem;"><strong>The Memory Blackout</strong> by Dex Silva</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Smog Season</strong> by Aliya Zhang</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Datalace</strong> by T.J. Krow</li>
-    </ul>
-  </div>
+    <div style="display: flex; flex-wrap: wrap; gap: 2rem; margin-top: 0.5rem;">
+      <div style="flex: 1 1 300px;">
+        <h3 style="margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Fiction</h3>
+        <ul style="list-style: none; padding: 0; margin: 0; color: var(--text-muted);">
+          <li style="margin-bottom: 0.75rem;"><strong>Neon Ashes</strong> by J. M. Caldwell</li>
+          <li style="margin-bottom: 0.75rem;"><strong>Chrome Dreams</strong> by Riko Ahn</li>
+          <li style="margin-bottom: 0.75rem;"><strong>The Memory Blackout</strong> by Dex Silva</li>
+          <li style="margin-bottom: 0.75rem;"><strong>Smog Season</strong> by Aliya Zhang</li>
+          <li style="margin-bottom: 0.75rem;"><strong>Datalace</strong> by T.J. Krow</li>
+        </ul>
+      </div>
 
-  <div style="flex: 1 1 300px;">
-    <h3 style="margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Artwork</h3>
-    <ul style="list-style: none; padding: 0; margin: 0; color: var(--text-muted);">
-      <li style="margin-bottom: 0.75rem;"><strong>Neural Bloom</strong> by Keira Vonn</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Ghost Signal</strong> by M. Reyes</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Synth Skin</strong> by ARTI.FX</li>
-    </ul>
-  </div>
-</div>
-
-      <div style="width: 100%; text-align: center; margin-top: 2.5rem;">
-        <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
+      <div style="flex: 1 1 300px;">
+        <h3 style="margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Artwork</h3>
+        <ul style="list-style: none; padding: 0; margin: 0; color: var(--text-muted);">
+          <li style="margin-bottom: 0.75rem;"><strong>Neural Bloom</strong> by Keira Vonn</li>
+          <li style="margin-bottom: 0.75rem;"><strong>Ghost Signal</strong> by M. Reyes</li>
+          <li style="margin-bottom: 0.75rem;"><strong>Synth Skin</strong> by ARTI.FX</li>
+        </ul>
       </div>
     </div>
-  </section>
+
+    <div style="width: 100%; text-align: center; margin-top: 2.5rem; display: flex; justify-content: center; gap: 0.75rem; flex-wrap: wrap;">
+      <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
+      <a href="Burnline_Issue_01.pdf" class="btn secondary" style="text-decoration: none; padding: 0.65rem 1rem; border-radius: 8px; border: 1px solid rgba(13,246,227,0.45); color: var(--neon); background: transparent; font-weight: 800;">Download PDF</a>
+    </div>
+  </div>
+</section>
 
   <section id="latest-issue">
     <iframe allowfullscreen="" allow="clipboard-write" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/6c786ba517.html"></iframe>
@@ -415,6 +416,7 @@
   </script>
 </body>
 </html>
+
 
 
 
