--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
     </nav>
   </header>
 
- <section class="hero">
+<section class="hero">
   <a href="#latest-issue" onclick="openFlipbook(event)">
     <img src="Burnline Issue 01.png" alt="Latest issue cover" />
   </a>
@@ -329,8 +329,8 @@
     </div>
 
     <div style="width: 100%; text-align: center; margin-top: 2.5rem; display: flex; justify-content: center; gap: 0.75rem; flex-wrap: wrap;">
-      <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
-      <a href="Burnline_Issue_01.pdf" class="btn secondary" style="text-decoration: none; padding: 0.65rem 1rem; border-radius: 8px; border: 1px solid rgba(13,246,227,0.45); color: var(--neon); background: transparent; font-weight: 800;">Download PDF</a>
+      <a href="#" class="btn">Read This Issue</a>
+      <a href="Burnline_Issue_01.pdf" class="btn secondary">Download PDF</a>
     </div>
   </div>
 </section>
@@ -416,6 +416,7 @@
   </script>
 </body>
 </html>
+
 
 
 
