--- a/fiction.html
+++ b/fiction.html
@@ -49,6 +49,9 @@
       .site-nav.active{display:flex;}
       .hamburger{display:flex;}
     }
+    .logo-title span {
+  font-size: 2.8rem;
+}
 
     /* Shared */
     a { color: var(--neon); text-decoration:none; }
