--- a/fiction.html
+++ b/fiction.html
@@ -39,6 +39,7 @@
     }
     .logo-title { display: flex; align-items: center; gap: 1rem; text-decoration: none; color: inherit; }
     .logo-title img { height: 60px; width: auto; }
+    .logo-title span { font-size: 2.8rem; } /* Match homepage title size */
     .site-nav { display: flex; gap: 2rem; font-size: 1rem; }
     .site-nav a { color:#0f0f1c; text-decoration:none; font-weight:bold; transition: color .3s; }
     .site-nav a:hover { color: var(--pink); }
@@ -49,9 +50,6 @@
       .site-nav.active{display:flex;}
       .hamburger{display:flex;}
     }
-    .logo-title span {
-  font-size: 2.8rem;
-}
 
     /* Shared */
     a { color: var(--neon); text-decoration:none; }
