--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
       height: 60px;
       width: auto;
     }
+.logo-title span{
+  font-size: clamp(1.25rem, 2.4vw, 1.75rem); /* ~20px → ~28px */
+  font-weight: 600;
+  letter-spacing: 0.05em;
+  line-height: 1;
+  text-transform: uppercase; /* keeps it consistent if the text changes */
+}
 
     .site-nav {
       display: flex;
@@ -415,4 +422,5 @@
   </script>
 </body>
 </html>
+
 
