--- a/bestmedia.html
+++ b/bestmedia.html
@@ -6,211 +6,190 @@
   <title>Best Cyberpunk Media – Burnline</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #0f0f1c, #1b1e35);
-      color: #f0f0f0;
-    }
+ <style>
+  /* ===== Base Styles ===== */
+  body {
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+    background: linear-gradient(135deg, #0f0f1c, #1b1e35);
+    color: #f0f0f0;
+  }
+  h1, h2, h3, h4, nav a, header {
+    font-family: 'Orbitron', sans-serif;
+  }
 
-    h1, h2, h3, h4, nav a, header {
-      font-family: 'Orbitron', sans-serif;
-    }
+  /* ===== Header ===== */
+  .site-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #0df6e3;
+    color: #0f0f1c;
+    padding: 1rem 2rem;
+    flex-wrap: wrap;
+    position: relative;
+  }
+  .logo-title {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    text-decoration: none;
+    color: inherit;
+  }
+  .logo-title img {
+    height: 60px;
+    width: auto;
+  }
+  /* No font-size set for .logo-title span — inherits default like homepage */
 
-    .site-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: #0df6e3;
-      color: #0f0f1c;
-      padding: 1rem 2rem;
-      font-size: 2rem;
-      position: relative;
-      flex-wrap: wrap;
-    }
+  .site-nav {
+    display: flex;
+    gap: 2rem;
+    font-size: 1rem;
+  }
+  .site-nav a {
+    color: #0f0f1c;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s;
+  }
+  .site-nav a:hover {
+    color: #ff4ac2;
+  }
 
-    .hamburger {
+  .hamburger {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    cursor: pointer;
+    width: 30px;
+    height: 25px;
+    gap: 5px;
+  }
+  .hamburger div {
+    background: #0f0f1c;
+    height: 4px;
+    width: 100%;
+    border-radius: 2px;
+  }
+
+  @media (max-width: 768px) {
+    .hamburger { display: flex; }
+    .site-nav {
       display: none;
       flex-direction: column;
-      justify-content: center;
-      cursor: pointer;
-      width: 30px;
-      height: 25px;
-      gap: 5px;
-    }
-
-    .hamburger div {
-      background: #0f0f1c;
-      height: 4px;
       width: 100%;
-      border-radius: 2px;
+      background-color: #0df6e3;
+      padding: 1rem 2rem;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      z-index: 999;
     }
-
-    .logo-title {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-      text-decoration: none;
-      color: inherit;
-    }
-
-    .logo-title img {
-      height: 60px;
-      width: auto;
-    }
-
-    .site-nav {
-      display: flex;
-      gap: 2rem;
-      font-size: 1rem;
-    }
-
+    .site-nav.show { display: flex; }
     .site-nav a {
       color: #0f0f1c;
-      text-decoration: none;
-      font-weight: bold;
+      padding: 0.5rem 0;
     }
+  }
 
-    .site-nav a:hover {
-      color: #ff4ac2;
-    }
+  /* ===== Page Content ===== */
+  .gradient-heading {
+    font-size: 2rem;
+    background: linear-gradient(90deg, #f72585, #7209b7);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 1rem;
+  }
+  .content {
+    max-width: 800px;
+    margin: 4rem auto;
+    padding: 0 2rem;
+  }
+  .chart-container {
+    margin-bottom: 2rem;
+  }
+  .media-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.05);
+    border-radius: 6px;
+    padding: 1rem;
+    margin-bottom: 1rem;
+  }
+  .media-title {
+    font-weight: bold;
+    flex-grow: 1;
+  }
+  .vote-buttons {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+  .vote-buttons button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: #0df6e3;
+    transition: transform 0.1s ease;
+  }
+  .vote-buttons button:hover {
+    transform: scale(1.2);
+    color: #ff4ac2;
+  }
 
-    .gradient-heading {
-      font-size: 2rem;
-      background: linear-gradient(90deg, #f72585, #7209b7);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      margin-bottom: 1rem;
-    }
+  /* ===== Footer ===== */
+  footer {
+    background: #0f0f1c;
+    padding: 2rem 1rem;
+    color: #ccc;
+  }
+  .footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: auto;
+  }
+  .footer-column {
+    flex: 1;
+    min-width: 250px;
+    margin: 1rem;
+  }
+  .newsletter-input {
+    padding: 0.5rem;
+    border: none;
+    border-radius: 4px;
+    width: 100%;
+    max-width: 250px;
+    margin-bottom: 0.5rem;
+  }
+  .newsletter-button {
+    padding: 0.5rem 1rem;
+    background-color: #0df6e3;
+    border: none;
+    border-radius: 4px;
+    color: #0f0f1c;
+    cursor: pointer;
+    font-weight: bold;
+  }
+  .newsletter-button:hover {
+    background-color: #0bc2b7;
+  }
+  .footer-logo {
+    width: 60px;
+    margin-bottom: 1rem;
+  }
+  .footer-bottom {
+    text-align: center;
+    margin-top: 2rem;
+    font-size: 0.8rem;
+    color: #666;
+  }
+</style>
 
-    .content {
-      max-width: 800px;
-      margin: 4rem auto;
-      padding: 0 2rem;
-    }
-
-    .chart-container {
-      margin-bottom: 2rem;
-    }
-
-    .media-item {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background-color: rgba(255, 255, 255, 0.05);
-      border-radius: 6px;
-      padding: 1rem;
-      margin-bottom: 1rem;
-    }
-
-    .media-title {
-      font-weight: bold;
-      flex-grow: 1;
-    }
-
-    .vote-buttons {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
-
-    .vote-buttons button {
-      background: none;
-      border: none;
-      cursor: pointer;
-      font-size: 1.5rem;
-      color: #0df6e3;
-      transition: transform 0.1s ease;
-    }
-
-    .vote-buttons button:hover {
-      transform: scale(1.2);
-      color: #ff4ac2;
-    }
-
-    footer {
-      background: #0f0f1c;
-      padding: 2rem 1rem;
-      color: #ccc;
-    }
-
-    .footer-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .footer-column {
-      flex: 1;
-      min-width: 250px;
-      margin: 1rem;
-    }
-
-    .newsletter-input {
-      padding: 0.5rem;
-      border: none;
-      border-radius: 4px;
-      width: 100%;
-      max-width: 250px;
-      margin-bottom: 0.5rem;
-    }
-
-    .newsletter-button {
-      padding: 0.5rem 1rem;
-      background-color: #0df6e3;
-      border: none;
-      border-radius: 4px;
-      color: #0f0f1c;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    .newsletter-button:hover {
-      background-color: #0bc2b7;
-    }
-
-    .footer-logo {
-      width: 60px;
-      margin-bottom: 1rem;
-    }
-
-    .footer-bottom {
-      text-align: center;
-      margin-top: 2rem;
-      font-size: 0.8rem;
-      color: #666;
-    }
-
-    @media (max-width: 768px) {
-      .hamburger {
-        display: flex;
-      }
-
-      .site-nav {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        background-color: #0df6e3;
-        padding: 1rem 2rem;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        z-index: 999;
-      }
-
-      .site-nav.show {
-        display: flex;
-      }
-
-      .site-nav a {
-        color: #0f0f1c;
-        padding: 0.5rem 0;
-      }
-    }
-  </style>
 </head>
 <body>
 
