--- a/about.html
+++ b/about.html
@@ -186,7 +186,7 @@
       <div></div>
     </div>
     <nav class="site-nav" id="site-nav">
-      <a href="fiction.html">Fiction</a>
+      <a href="fiction.html">Issues</a>
       <a href="art.html">Art</a>
       <a href="about.html">About</a>
       <a href="submit.html">Submit</a>
