--- a/fiction.html
+++ b/fiction.html
@@ -59,7 +59,6 @@
 }
 
 
-    /* Shared */
     a { color: var(--neon); text-decoration:none; }
     a:hover { text-decoration:none; }
     .gradient-heading {
@@ -72,7 +71,6 @@
     .content { max-width: 1200px; margin: 2rem auto 4rem; padding: 0 2rem; }
     .section-intro { text-align:center; margin: 2rem 0 3rem; }
 
-    /* Issue hero layout (matches homepage) */
     .issue-hero{
       display:flex;
       gap: 2rem;
@@ -150,7 +148,6 @@
       .issue-hero .cover{max-width:100%; flex:0 0 auto;}
     }
 
-    /* Footer */
     footer { background: #0f0f1c; padding: 2rem; color: #ccc; margin-top: 4rem; }
     .footer-container { display: flex; flex-wrap: wrap; justify-content: space-between; gap: 2rem; max-width: 1200px; margin: 0 auto; }
     .footer-column { flex:1; min-width:220px; }
@@ -171,7 +168,7 @@
       <div></div><div></div><div></div>
     </div>
     <nav class="site-nav" id="site-nav">
-      <a href="fiction.html">Fiction</a>
+      <a href="fiction.html">Issues</a>
       <a href="art.html">Art</a>
       <a href="about.html">About</a>
       <a href="submit.html">Submit</a>
