--- a/submit.html
+++ b/submit.html
@@ -171,7 +171,7 @@
       <div></div>
     </div>
     <nav class="site-nav" id="site-nav">
-      <a href="fiction.html">Fiction</a>
+      <a href="fiction.html">Issues</a>
       <a href="art.html">Art</a>
       <a href="https://bowliopia.github.io/burnline/about.html">About</a>
       <a href="submit.html">Submit</a>
@@ -180,7 +180,7 @@
 
 <section class="content">
   <h1 class="gradient-heading">Submit to Burnline</h1>
-  <p>Burnline is a new publication run by people who love the genre and want to see it evolve. We're currently open for short fiction and art submissions. If you've created something bold, strange, gritty, or just plain cool—send it our way.</p>
+  <p>Burnline is a new publication run by a couple of people who love the cyberpunk genre and want to see it evolve. We're currently open for short fiction and art submissions. If you've created something cyberpunk and would like to get it published, send it our way.</p>
 
   <!-- Tabs -->
   <div style="margin: 2rem 0;">
@@ -191,8 +191,8 @@
   <!-- Fiction Guidelines Section -->
   <div id="fiction" style="text-align: left;">
 <h2 id="fiction" class="gradient-heading-blue" style="margin-top: 3rem;">Fiction Guidelines</h2>
-    <p>We’re excited about cyberpunk in all its forms—classic and modern, urban and off-world, sleek and gritty. In fiction, we're looking for what you'd expect; near-future worlds with corporate control, people altered by tech-implants, you get it. <strong>Above all however, we care about character.</strong> We want people who make us feel something while they're navigating whatever wild setting you’ve built. Human connection is what makes good cyberpunk work.</p>
-    <p style="margin-top: -0.5rem;">That said, genre is a slippery thing. If your piece is strange, experimental, or sits on the edge of cyberpunk, send it anyway. If it moves us, we’ll publish it.</p>
+    <p>We’re excited about cyberpunk in all its forms—classic and modern, urban and off-world, sleek and gritty. In fiction, we're looking for what you'd expect; near-future worlds with corporate control, people altered by tech-implants, you get it. <strong>Above all however, we care about character.</strong> We want people who make us feel something while they're navigating whatever wild setting you’ve built. Human connection is what makes good cyberpunk work. If the content moves us, we’ll usually publish it.</p>
+    <p style="margin-top: -0.5rem;">We're less interested in anything outside of the cyberpunk subgenre for this magazing. If you're submitting, please make sure you'd classify your work as cyberpunk specifically.</p>
 
     <!-- Info Table -->
     <table style="width: 100%; border-collapse: collapse; margin-top: 2rem; max-width: 700px;">
