--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Burnline – The Cyberpunk Magazine</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <!-- Updated font link: RQND Pro instead of Orbitron -->
+  <link href="https://fonts.googleapis.com/css2?family=RQND+Pro:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root{
       --bg-deep-1:#0f0f1c;
@@ -32,8 +33,9 @@
     }
     html { scroll-behavior: smooth; }
 
+    /* Updated from Orbitron to RQND Pro */
     h1, h2, h3, nav a, header {
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'RQND Pro', sans-serif;
       line-height: 1.4;
     }
     h1 { font-size: 2.8rem; }
@@ -152,7 +154,7 @@
       text-decoration: underline;
     }
 
-    /* Grid band (keep spacing from light version, switch to dark w/ cyan stripes) */
+    /* Grid band */
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -415,6 +417,7 @@
   </script>
 </body>
 </html>
+
 
 
 
